@@ -878,6 +878,9 @@ RemoteReply			When a reply from a Vim that functions as
 				Note that even if an autocommand is defined,
 				the reply should be read with remote_read()
 				to consume it.
+							*SearchPost*
+SearchPost			After making a search with |n|, |*|, |#|, or
+				|N|, or after the |:substitute| command.
 							*SearchWrapped*
 SearchWrapped			After making a search with |n| or |N| if the
 				search wraps around the document back to
